# stori-card

./: .gitignore  Dockerfile  Dockerfile.lambda  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/versions/: 28e627756e66_create_transaction_table.py
src/: boostrap.py  constants.py  db.py  emails.py  handlers.py  lambda_app.py  main.py  models.py  notifications.py  process.py
src/commands/: create_tx_file.py  send_report.py
src/migrations/: env.py
src/migrations/versions/: e2cae9da627f_create_transaction_table.py
src/templates/: report.html
tests/: conftest.py  test_handlers.py  test_notifications.py
tests/commands/: test_create_tx_file.py
tf/aws/: common.tf  main.tf  vars.tf  version.tf
tx_files/: new_tx_file.csv  tx_file.csv
